# coreflow

./: .gitmodules  CORE_DESIGN.md  Cargo.toml  README.md
examples/: branch_control.rs  concurrent_execution.rs  fan_in.rs  feedback_timeout.rs  field_flow.rs  js_surface.rs  loop_control.rs  manual_surface.rs  tool_registry.rs
src/: error.rs  flow.rs  kernel.rs  lib.rs  plug.rs  value.rs
src/graph/: check.rs  mod.rs  output.rs  surface.rs  types.rs
tests/: graph_behavior_adaptive.rs  graph_behavior_basic.rs  graph_behavior_execution.rs  graph_behavior_index_rebuild.rs  graph_behavior_inline_and_reuse.rs  graph_behavior_store.rs
