[package]
name = "coreflow"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
boa_engine = "0.20"
